--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,12 +1,12 @@
-:root{
-    --yellow:#FFCC00;
-    --black:#0E1414;
-    --beige:#F8EAE0;
-    --seconddark:#182222;
-    --darkgray:#373737;
-    --title:#1B1B1B;
-    --border:rgba(255, 255, 255, 0.35);
-    --oswald:'Oswald';
-    --montserrat:'Montserrat';
-    --opensans:'Open Sans';
+:root {
+  --yellow: #ffcc00;
+  --black: #0e1414;
+  --beige: #f8eae0;
+  --seconddark: #182222;
+  --darkgray: #373737;
+  --title: #1b1b1b;
+  --border: rgba(255, 255, 255, 0.35);
+  --oswald: "Oswald";
+  --montserrat: "Montserrat";
+  --opensans: "Open Sans";
 }
