--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,48 +1,46 @@
 .swiper-slide img {
-    width: 100%;
-    height: 100%;
-    object-position: center;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
 }
 
 .swiper-slide-active {
-    transform: scale(1.2); /* Увеличьте размер активного слайда */
+  transform: scale(1.2); /* Увеличьте размер активного слайда */
 }
 
-.swiper{
-    width: 100%;
-    height: 100%;
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 
-.swiper-slide{
-    height: 100%;
+.swiper-slide {
+  height: 100%;
 }
 
-.slider-arrows{
-    display: flex;
-    height: 100%;
+.slider-arrows {
+  display: flex;
+  height: 100%;
 }
 
-.slider-arrow{
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+.slider-arrow {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
-[data-slider-arrow] img{
-    transition: all .4s ease-in;
+[data-slider-arrow] img {
+  transition: all 0.4s ease-in;
 }
 
-[data-slider-arrow="left"]:hover img{
-    transform: translateX(-5px);
+[data-slider-arrow="left"]:hover img {
+  transform: translateX(-5px);
 }
 
-[data-slider-arrow="right"]:hover img{
-    transform: translateX(5px);
+[data-slider-arrow="right"]:hover img {
+  transform: translateX(5px);
 }
 
 /* product slider */
-
-
