--- a/assets/css/components/about.css
+++ b/assets/css/components/about.css
@@ -14,7 +14,7 @@
     left: 0;
     top: 0;
     z-index: -1;
-    background-image: url('/assets/images/Градиент.png');
+    background-image: url('/Avangard-landing/assets/images/Градиент.png');
     background-size: cover;
     background-repeat: no-repeat;
 }
