--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -65,42 +65,42 @@
   
   @font-face {
     font-family: 'Oswald';
-    src: url('../assets/fonts/Oswald/Oswald-ExtraLight.ttf') format('truetype');
+    src: url('./assets/fonts/Oswald/Oswald-ExtraLight.ttf') format('truetype');
     font-weight: 200; /* Extra Light */
     font-style: normal;
   }
   
   @font-face {
     font-family: 'Oswald';
-    src: url('../assets/fonts/Oswald/Oswald-Light.ttf') format('truetype');
+    src: url('./assets/fonts/Oswald/Oswald-Light.ttf') format('truetype');
     font-weight: 300; /* Light */
     font-style: normal;
   }
   
   @font-face {
     font-family: 'Oswald';
-    src: url('../assets/fonts/Oswald/Oswald-Medium.ttf') format('truetype');
+    src: url('./assets/fonts/Oswald/Oswald-Medium.ttf') format('truetype');
     font-weight: 500; /* Medium */
     font-style: normal;
   }
   
   @font-face {
     font-family: 'Oswald';
-    src: url('../assets/fonts/Oswald/Oswald-Regular.ttf') format('truetype');
+    src: url('./assets/fonts/Oswald/Oswald-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
   
   @font-face {
     font-family: 'Oswald';
-    src: url('../assets/fonts/Oswald/Oswald-SemiBold.ttf') format('truetype');
+    src: url('./assets/fonts/Oswald/Oswald-SemiBold.ttf') format('truetype');
     font-weight: 600; /* Semi-Bold */
     font-style: normal;
   }
 
   @font-face {
     font-family: 'Open Sans';
-    src: url('../assets/fonts/OpenSans/OpenSans-Regular.ttf') format('truetype');
+    src: url('./assets/fonts/OpenSans/OpenSans-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
