--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,11 +302,16 @@ input::placeholder {
    .form__footer-button {
       width: 100%;
       height: 54px;
+      font-size: 20px;
    }
 
    .form__footer-message {
       padding-left: 0;
       padding-top: 0;
       width: 100%;
+   }
+
+   .input{
+      font-size: 16px;
    }
 }
