--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -303,6 +303,7 @@ input::placeholder {
       width: 100%;
       height: 54px;
       font-size: 20px;
+      font-family: var(--oswald);
    }
 
    .form__footer-message {
