--- a/assets/css/components/vacancies.css
+++ b/assets/css/components/vacancies.css
@@ -32,6 +32,12 @@
    justify-content: space-between;
    cursor: pointer;
    background: white;
+   transition: all .2s ease-in;
+}
+
+.vacancies__card:hover{
+   transform: scale(1.03);
+   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .vacancies__card.vacancies__card--dark {
