--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,7 +45,7 @@ button {
 }
 
 .main {
-   background-image: url("../images/main.png");
+   background-image: url("../images/main.webp");
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
