--- a/assets/fonts/icomoon/style.css
+++ b/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?wk45dt');
-  src:  url('fonts/icomoon.eot?wk45dt#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?wk45dt') format('truetype'),
-    url('fonts/icomoon.woff?wk45dt') format('woff'),
-    url('fonts/icomoon.svg?wk45dt#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?kgyge9');
+  src:  url('fonts/icomoon.eot?kgyge9#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?kgyge9') format('truetype'),
+    url('fonts/icomoon.woff?kgyge9') format('woff'),
+    url('fonts/icomoon.svg?kgyge9#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-emal:before {
+  content: "\e905";
+}
+.icon-about-icon3:before {
+  content: "\e907";
+}
+.icon-about-icon2:before {
+  content: "\e908";
+}
+.icon-about-icon:before {
+  content: "\e909";
+}
+.icon-rastvor:before {
+  content: "\e906";
+}
 .icon-grunt:before {
   content: "\e902";
 }
