add contact info

--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -34,6 +34,9 @@
 
 .header__menu-phone{
     margin-top: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .header__menu-phone a{
