--- a/assets/css/components/news.css
+++ b/assets/css/components/news.css
@@ -39,7 +39,12 @@
 .news__content-title{
     font-size: 24px;
     font-weight: 500;
-    margin-bottom: 55px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    margin-bottom: 20px;
 }
 
 .news__content-desc{
