--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -3,6 +3,7 @@
     background: rgba(11, 16, 16, 0.36);
     backdrop-filter: blur(7.5px);
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    z-index: 1;
 }
 
 .header__inner{
