--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,15 +49,21 @@ button {
 }
 
 .main {
-   background-image: url("../images/main.webp");
-   background-position: center;
-   background-size: cover;
-   background-repeat: no-repeat;
-   position: relative;
-   z-index: 1;
    display: flex;
    flex-direction: column;
+   position: relative;
 }
+
+.main__background{
+   position: absolute;
+   top: 0;
+   left: 0;
+   z-index: -2;
+   width: 100%;
+   object-fit: fill;
+}
+
+
 
 .main::before {
    content: "";
@@ -156,7 +162,7 @@ button {
    padding: 25px 30px;
    display: block;
    width: 100%;
-   color: white;
+   color: inherit;
    font-family: var(--montserrat);
    font-size: 18px;
    font-weight: 400;
@@ -180,6 +186,15 @@ input::placeholder {
 
 .input.error {
    border: 1px solid rgba(221, 21, 21, 0.7);
+}
+
+.input__file{
+   font-size: 18px;
+   color: #1B1B1B;
+}
+
+.input__file i{
+   color: var(--yellow);
 }
 
 .title {
@@ -247,6 +262,8 @@ input::placeholder {
    line-height: 20px;
    width: 50%;
 }
+
+
 
 .show-md {
    display: none !important;
