--- a/assets/fonts/icomoon/style.css
+++ b/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?w6f5z7');
-  src:  url('fonts/icomoon.eot?w6f5z7#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?w6f5z7') format('truetype'),
-    url('fonts/icomoon.woff?w6f5z7') format('woff'),
-    url('fonts/icomoon.svg?w6f5z7#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?gpvu7t');
+  src:  url('fonts/icomoon.eot?gpvu7t#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?gpvu7t') format('truetype'),
+    url('fonts/icomoon.woff?gpvu7t') format('woff'),
+    url('fonts/icomoon.svg?gpvu7t#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-compos:before {
+  content: "\e90c";
+}
+.icon-road:before {
+  content: "\e90d";
+}
+.icon-gruntemal:before {
+  content: "\e90e";
+}
+.icon-file:before {
+  content: "\e90b";
+}
 .icon-close:before {
   content: "\e90a";
 }
