--- a/assets/css/components/vacancies.css
+++ b/assets/css/components/vacancies.css
@@ -119,7 +119,7 @@
    justify-content: space-between;
 }
 
-.vacancies__card-text-mode{
+.vacancies__card-text-mode {
    margin-bottom: 43px;
 }
 
@@ -131,21 +131,20 @@
    display: none;
 }
 
-.vacancies__modal-title{
+.vacancies__modal-title {
    font-size: 38px;
    margin-bottom: 57px;
 }
 
-.vacancies__modal_container-inner{
-   max-width: 407px;
+.vacancies__modal_container-inner {
    align-items: start;
 }
 
-.vacancies__form{
+.vacancies__form {
    color: black;
 }
 
-.vacancies__form .file-field{
+.vacancies__form .file-field {
    margin: 21px 0;
 }
 
@@ -204,7 +203,7 @@
       margin-bottom: 30px;
    }
 
-   .vacancies__card-price{
+   .vacancies__card-price {
       font-size: 26px;
    }
 
@@ -239,8 +238,7 @@
       display: inline;
    }
 
-   .vacancies__card.vacancies__card--intro
-      .vacancies__card-name:not(.vacancies__card-name-mobile) {
+   .vacancies__card.vacancies__card--intro .vacancies__card-name:not(.vacancies__card-name-mobile) {
       display: none;
    }
 
